CSS tweak to fix a Firefox layout problem.

--- a/static/style.css
+++ b/static/style.css
@@ -87,8 +87,8 @@ changed, it should be uniformly changed in all those places. */
 
 #login { text-align: center }
 #login #title { font-weight: bold }
-#login table { border: 2px solid black; margin-top: 1em; margin-left: auto;
-  margin-right: auto; padding: 1em }
+#login table { border: 2px solid black; margin-left: auto; margin-right: auto;
+  padding: 1em }
 #login th { text-align: right; font-weight: normal }
 
 #admin .switch { text-decoration: none; color: black; font-style: oblique }
@@ -106,7 +106,7 @@ changed, it should be uniformly changed in all those places. */
 
 #pwreset { text-align: center }
 #pwreset #title { font-weight: bold }
-#pwreset table { border: 2px solid black; margin-top: 1em; margin-left: auto;
+#pwreset table { border: 2px solid black; margin-left: auto;
   margin-right: auto; padding: 1em }
 #pwreset th { text-align: right; font-weight: normal }
 
